tests/NormalTests/paczka1/small_fuzzy/59980856.err
Error in line 1: FL6CSTdRp A515 7,2
Error in line 2: Sv3N8MEiV A18 44,5
Error in line 8: qlX4vvdTLhR A515 54,7
Error in line 10: qlX4vvdTLhR A18 77,7
Error in line 14: ujNOX S157 67,8
